sample_jwt/docker/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 7902 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 7901 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              # Publish API
              - match: { prefix: "/sample_jwt.SampleJwt" }
                # prefix: "/"
                # headers:
                # - name: content-type
                #   value: application/grpc
                route:
                  cluster: sample_jwt
                  #max_grpc_timeout: 0s
              # Publish public JWKS
              - match:  { prefix: "/.well-known/jwks.json" }
                route:
                  cluster: server_jwt_http
              #cors:
              #  allow_origin:
              #  - "*"
              #  allow_methods: GET, PUT, DELETE, POST, OPTIONS
              #  allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
              #  max_age: "1728000"
              #  expose_headers: custom-header-1,grpc-status,grpc-message
              #  enabled: true
          http_filters:
          - name: envoy.grpc_web
          #- name: envoy.cors
          - name: envoy.filters.http.jwt_authn
            config:
              providers:
                infsandbox_provider:
                  issuer: https://infsandbox.app
                  #local_jwks:
                  #  filename: /etc/envoy/jwks/jwks_public.json
                  remote_jwks:
                    http_uri:
                      uri: http://127.0.0.1:8918/.well-known/jwks.json
                      cluster: server_jwt_http
                    cache_duration:
                      seconds: 3600
                  forward: true
                  forward_payload_header: x-jwt-payload
              rules:
              - match:
                  prefix: /
                requires:
                  provider_and_audiences:
                    provider_name: infsandbox_provider
                    audiences:
                      infsandbox
          - name: envoy.router
  clusters:
  # /sample_jwt.SampleJwt
  - name: sample_jwt
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 7900 }}]
  # http://127.0.0.1:8918/.well-known/jwks.json
  - name: server_jwt_http
    connect_timeout: 0.25s
    type: logical_dns
    # http2_protocol_options: {}
    lb_policy: round_robin
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 8918 }}]
